--- a/map.html
+++ b/map.html
@@ -49,8 +49,8 @@
                     <div class="form-group">
                       <label for="exampleInputEmail1">Enter an address:</label>
                       <div class="input-group">
-                        <input type="text" class="form-control" id="location-input" placeholder="Search">
-                        <input type="text" class="form-control" id="zipcode-input" placeholder="Zip code for accuracy">
+                        <input type="text" class="form-control" id="location-input" placeholder="Search" required="true">
+                        <input type="text" class="form-control" id="zipcode-input" placeholder="Postal Code" required="true">
                         <span class="input-group-btn">
                              <button type="submit" class="btn btn-primary" type="button">Find</button>
                         </span>
