--- a/add_review.html
+++ b/add_review.html
@@ -13,7 +13,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-      <a class="navbar-brand" href="#" style="font-weight: 900; font-size:30px;">RATE MY LANDLORD</a>
+      <a class="navbar-brand" href="map.html" style="font-weight: 900; font-size:30px;">RATE MY LANDLORD</a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
