--- a/map.html
+++ b/map.html
@@ -50,7 +50,7 @@
                       <label for="exampleInputEmail1">Enter an address:</label>
                       <div class="input-group">
                         <input type="text" class="form-control" id="location-input" placeholder="Search" required ="true">
-                        <input type="text" class="form-control" id="zipcode-input" placeholder="Postal Code" required ="true">
+                        <input type="text" class="form-control" id="zipcode-input" placeholder="Postal Code">
                         <span class="input-group-btn">
                              <button type="submit" class="btn btn-primary" type="button">Find</button>
                         </span>
