--- a/add_review.html
+++ b/add_review.html
@@ -17,10 +17,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="map.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="add_review.html">New Review</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -56,7 +56,9 @@
           <label for="exampleReview">Review: </label>
           <textarea class="form-control" name="review" rows="8" placeholder="Write your review here!"></textarea>
         </div>
-      
+       <div class="form-group">
+         <label for="form-control">Overall Satification: </label>
+       </div> 
       <div class="form-check form-check-inline">
           <input class="form-check-input" type="radio" name="one" id="inlineRadio1" value="1">
           <label class="form-check-label" for="inlineRadio1">1</label>
