--- a/add_review.html
+++ b/add_review.html
@@ -56,30 +56,17 @@
           <label for="exampleReview">Review: </label>
           <textarea class="form-control" name="review" rows="8" placeholder="Write your review here!"></textarea>
         </div>
+      
        <div class="form-group">
-         <label for="form-control">Overall Satification: </label>
-       </div> 
-      <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="one" id="inlineRadio1" value="1">
-          <label class="form-check-label" for="inlineRadio1">1</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="two" id="inlineRadio2" value="2">
-          <label class="form-check-label" for="inlineRadio2">2</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="three" id="inlineRadio3" value="3">
-          <label class="form-check-label" for="inlineRadio3">3</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="four" id="inlineRadio3" value="4">
-          <label class="form-check-label" for="inlineRadio3">4</label>
-        </div>
-        
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="five" id="inlineRadio3" value="5">
-          <label class="form-check-label" for="inlineRadio3">5</label>
-        </div>
+        <label for="exampleFormControlSelect1">Overall Satification </label>
+        <select class="form-control" id="exampleFormControlSelect1">
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+      </div>
 
         <br><button type="submitReview" class="btn btn-primary mt-4">Submit</button>
   </div>
