--- a/map.html
+++ b/map.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet"> 
+    <link href="./css/styles.css" rel="stylesheet"> 
     
     
     <title>Rate my Landlord</title>
