--- a/map.html
+++ b/map.html
@@ -12,7 +12,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="">
         <div class="container">
         <a class="navbar-brand" href="/" style="font-weight: 900; font-size:30px;">RATE MY LANDLORD</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +37,7 @@
             <div class="col">
                 <form id="location-form">
                     <div class="form-group">
-                      <label for="exampleInputEmail1">Enter an address:</label>
+                      <label for="exampleInputEmail1" style="color:white;">Enter an address:</label>
                       <div class="input-group">
                         <input type="text" class="form-control" id="location-input" placeholder="Search" required ="true">
                         <input type="text" class="form-control" id="zipcode-input" placeholder="Postal Code">
@@ -51,7 +51,7 @@
             <div class="col">
               <form action="/landlords/results" method = "GET">
                 <div class="form-group">
-                  <label for="exampleInputEmail1">Enter a landlord's name:</label>
+                  <label for="exampleInputEmail1" style="color:white";>Enter a landlord's name:</label>
                   <div class="input-group">
                     <input type="text" class="form-control" name = "search" placeholder="Search">
                     <span class="input-group-btn">
